resiliency/slow/slow-envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          access_log:
            - name: envoy.file_access_log
              config:
                path: "/var/log/access.log"
          route_config:
            name: local_route
            virtual_hosts:
            - name: slow
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/airports"
                route:
                  cluster: slow_cluster
          http_filters:
          - name: envoy.fault
            config:
              delay:
                type: fixed
                percent: 100
                fixed_delay: 4.5s
          - name: envoy.router
            config: {}
  clusters:
  - name: slow_cluster
    connect_timeout: 2s
    type: strict_dns
    lb_policy: round_robin
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 8080
    circuit_breakers:
      thresholds:
      - priority: DEFAULT
        max_connections: 1
        max_pending_requests: 1
        max_requests: 2
        max_retries: 2
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8081
